{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 137,
  "lineage": "5b9a1f42-3c7d-4e18-9a06-2d81ff4c6b30",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-04T02:11:47.884-08:00",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "projects/acme-prod/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "projects/acme-prod/global/networks/vpc-main",
            "priority": 1000,
            "project": "acme-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/acme-prod/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "create_before_destroy": true,
          "deposed": "abc12345"
        },
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-04T02:11:47.884-08:00",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "projects/acme-prod/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "projects/acme-prod/global/networks/vpc-main",
            "priority": 1000,
            "project": "acme-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/acme-prod/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny-ssh-external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "creation_timestamp": "2026-01-04T02:11:47.884-08:00",
            "deny": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "projects/acme-prod/global/firewalls/deny-ssh-external",
            "log_config": [],
            "name": "deny-ssh-external",
            "network": "projects/acme-prod/global/networks/vpc-main",
            "priority": 900,
            "project": "acme-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/acme-prod/global/firewalls/deny-ssh-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "edge-waf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "fingerprint": "Yj5nQ2VwR3M=",
            "id": "projects/acme-prod/global/securityPolicies/edge-waf",
            "name": "edge-waf",
            "project": "acme-prod",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "deny(403)",
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "203.0.113.0/24"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 1000
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/acme-prod/global/securityPolicies/edge-waf",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-health-checks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2026-01-04T02:11:47.884-08:00",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "projects/acme-prod/global/firewalls/allow-health-checks",
            "log_config": [],
            "name": "allow-health-checks",
            "network": "projects/acme-prod/global/networks/vpc-main",
            "priority": 1000,
            "project": "acme-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/acme-prod/global/firewalls/allow-health-checks",
            "source_ranges": [
              "35.191.0.0/16",
              "130.211.0.0/22"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-iap-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "prod",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-04T02:11:47.884-08:00",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "projects/acme-prod/global/firewalls/allow-iap-ssh",
            "log_config": [],
            "name": "allow-iap-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/acme-prod/global/networks/vpc-main",
            "priority": 800,
            "project": "acme-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/acme-prod/global/firewalls/allow-iap-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}